package com.easyhome.common.core.cache;

/**
 * TODO {Description}
 *
 * @author by kevin on 5/9/14.
 */
public abstract class AbsCache implements Cache{
}
