package com.easyhome.common.core.cache;

/**
 * 可缓存对象
 *
 * @author by kevin on 5/5/14.
 */
public interface Cachable {
}
