package com.easyhome.common.core.cache;

/**
 * 缓存池
 *
 * @author by kevin on 5/5/14.
 */
public class CachePool {
}
